# RFP-BUILDER

./: .gitignore  DIRECTORY_STRUCTURE.md  README.md  RFP_Builder_Client_Features_Guide.docx  config.toml.bak_codex  config.toml.example  requirements.txt  test_api.py  test_output.json
backend/: .server.pid  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  config.py  health.py  rfp.py  runs.py
backend/app/core/: __init__.py  auth.py  config.py  llm_client.py  llm_logger.py  text_chunker.py
backend/app/functions/: __init__.py  rfp_functions.py
backend/app/models/: __init__.py  schemas.py
backend/app/prompts/: __init__.py  system_prompts.py  user_prompts.py
backend/app/services/: __init__.py  blob_storage.py  code_interpreter.py  diagram_service.py  pdf_generator.py  pdf_service.py
backend/app/workflows/: __init__.py  executors.py  rfp_workflow.py  run_dirs.py  state.py
backend/outputs/runs/run_20260201_110354/word_document/: proposal.docx
backend/outputs/runs/run_20260201_111316/code_snapshots/: 01_initial_document_code.py
backend/outputs/runs/run_20260201_111316/image_assets/: cctv_data_flow.mmd  communication_flow.mmd  exec_timeline.mmd  flow_isolation_process.mmd  focused_sses_decision.mmd  governance_org.mmd  monitor_timeline.mmd  mwbe_process.mmd  outfall_workflow.mmd  past_project_timeline.mmd  phase_options_timeline.mmd  proposal_timeline.mmd  report_dependencies.mmd  requirements_flow.mmd  safety_workflow.mmd  smoke_workflow.mmd  system_context.mmd  task1_sequence.mmd  tasks_overview.mmd  team_org.mmd
(+139 files in other folders)
